# bafka

./: CMakeLists.txt  thoughts
.devcontainer/: Dockerfile  devcontainer.json
idl/: CMakeLists.txt  idl.capnp
src/: CMDGraphics.h  CMakeLists.txt  SFMLGraphic.h  View.cpp  View.h  button.h  context.ccc  context.h  div.h  eventCore.h  graphics.h  inline.cpp  inline.h  length.h  main.cc  paragraph.cpp  paragraph.h  rect.h  style.h  text_input.h  vec.cpp  vec.h
src/bafka/: CMakeLists.txt  apiHandler.h  capnproto_api.h  main copy 2.cpp  main copy.cpp  main.cpp  message.h  printRequestHandler.h  topic.cpp  topic.h
src/bafka_client/: CMakeLists.txt  main.cpp
src/bafka_server/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  test_topic.cpp  tests.cpp
